--- a/404.html
+++ b/404.html
@@ -29,13 +29,7 @@
 </div>
           </div>
           <div class="footer">
-            <div class="contact">
-              <p>
-                Shouding Xiang<br />
-                What You Are<br />
-                fansekey##gamil.com
-              </p>
-            </div>
+            &copy;2013
           </div>
         </div>
     </body>
