--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <script type="text/javascript">
 /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-var disqus_shortname = ''; // required: replace example with your forum shortname
+var disqus_shortname = 'feeddly'; // required: replace example with your forum shortname
 
 /* * * DON'T EDIT BELOW THIS LINE * * */
 (function () {
