--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
          </header>
 
          <div id="home">
-   <p class="intro">You've reached the webpage for the Jekyll theme <a href="https://github.com/berkoz/gereksiz">Gereksiz.</a> This is a blog. <a href="/atom.xml">Atom feed.</a></p>
+   <p class="intro">Pursue your object, be it what it will, steadily and indefatigably.  <a href="/about">About me.</a> <a href="/atom.xml">Atom feed.</a></p>
    
    <h2>Blog posts</h2>
    <ul class="posts">
