--- a/about/index.html
+++ b/about/index.html
@@ -11,7 +11,7 @@
       <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
       <link rel="icon" href="/favicon.ico" type="image/x-icon">
       <link rel="alternate" type="application/atom+xml" href="/atom.xml">
-      <title>About Gereksiz</title>
+      <title>About Me</title>
    </head>
    
    <body>
@@ -21,18 +21,11 @@
          </header>
 
          <article>
-   <h2>About Gereksiz</h2>
-   <p>Gereksiz is a minimalist Jekyll theme, based on the default Jekyll theme. It is responsive, generates JSON and Atom feeds on each build, and can be easily extended. It uses Open Sans from Google Fonts.</p>
-
-<blockquote>
-<p>It supports blockquotes, too.</p>
-</blockquote>
-
-<h2>Gereksiz on the Internet</h2>
+   <h2>About Me</h2>
+   <h2>on the Internet</h2>
 
 <ul>
-<li><a href="https://github.com/berkoz/gereksiz/">Gereksiz</a> on GitHub</li>
-<li><a href="http://bugsofberk.net">Bugs of Berk</a>, theme creator&#39;s website</li>
+<li><a href="https://github.com/xiangshouding">@xiangshouding</a></li>
 </ul>
 
 </article>
