--- a/welcome-to-jekyll/index.html
+++ b/welcome-to-jekyll/index.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8">
       <meta name="description" content="Personal blog of Berk Özbalcı, about computers, math and music">
-      <meta name="author" content="Berk Özbalcı">
+      <meta name="author" content="orrafy">
       <meta name="viewport" content="width=device-width">
       <link rel="stylesheet" href="/css/syntax.css">
       <link rel="stylesheet" href="/css/main.css">
@@ -12,6 +12,8 @@
       <link rel="icon" href="/favicon.ico" type="image/x-icon">
       <link rel="alternate" type="application/atom+xml" href="/atom.xml">
       <title>Welcome to Jekyll!</title>
+      <meta name="twitter:card" content="summary">
+      <meta name="twitter:site" content="@shouding">
    </head>
    
    <body>
