--- a/quickling-1/index.html
+++ b/quickling-1/index.html
@@ -40,7 +40,7 @@
 <ul>
 <li>先渲染首屏，其余的部分的html被放到注释里面（或<code>textarea</code>），这样就保证不被渲染，较少首屏时间。</li>
 <li>当用户向下查看次屏的内容时，再触发脚本渲染次屏的内容。</li>
-<li>依此展现整个网页</li>
+<li>依次展现整个网页</li>
 </ul>
 
 <h3>bigpipe</h3>
