--- a/quickling-1/index.html
+++ b/quickling-1/index.html
@@ -24,7 +24,7 @@
 
          <article>
    <h2>加快网页加载的方案：bigpipe，bigrender，lazyrender</h2>
-   <p>开篇之初需要介绍一些网站页面加载的各种性能优化手段，他们分别是<code>bigrender</code>、<code>bigpipe</code>、<code>quickling</code>。</p>
+   <p>开篇之初需要介绍一些网站页面加载的各种性能优化手段，他们分别是<code>bigrender</code>、<code>bigpipe</code>、<code>lazyrender</code>。</p>
 
 <ul>
 <li><code>bigrender</code> 一种减少首屏dom节点优化首屏展现的方案；</li>
