--- a/quickling-1/index.html
+++ b/quickling-1/index.html
@@ -11,7 +11,7 @@
       <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
       <link rel="icon" href="/favicon.ico" type="image/x-icon">
       <link rel="alternate" type="application/atom+xml" href="/atom.xml">
-      <title>加快网页加载的方案：bigpipe，bigrender，lazyrender</title>
+      <title>网页加载优化方案：bigpipe，bigrender，lazyrender</title>
       <meta name="twitter:card" content="summary">
       <meta name="twitter:site" content="@shouding">
    </head>
@@ -23,7 +23,7 @@
          </header>
 
          <article>
-   <h2>加快网页加载的方案：bigpipe，bigrender，lazyrender</h2>
+   <h2>网页加载优化方案：bigpipe，bigrender，lazyrender</h2>
    <p>开篇之初需要介绍一些网站页面加载的各种性能优化手段，他们分别是<code>bigrender</code>、<code>bigpipe</code>、<code>lazyrender</code>。</p>
 
 <ul>
