--- a/dayone/index.html
+++ b/dayone/index.html
@@ -8,6 +8,10 @@
       <link rel="stylesheet" href="/css/syntax.css">
       <link rel="stylesheet" href="/css/main.css">
       <link rel="stylesheet" href="/css/normalize.css">
+      <link rel="stylesheet" href="/css/css/font-awesome.min.css">
+      <!--[if IE 7]>
+        <link rel="stylesheet" href="/css/css/font-awesome-ie7.min.css">
+      <![endif]-->
       <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
       <link rel="icon" href="/favicon.ico" type="image/x-icon">
       <link rel="alternate" type="application/atom+xml" href="/atom.xml">
@@ -24,6 +28,7 @@
 
          <article>
    <h2>Awesome App: Day One </h2>
+   <hr />
    <p>OK, 这是一个系列文章<code>Awesome App</code>，我想给大家分享一些我觉得不错的App。</p>
 
 <p>今天给大家分享的是<a href="http://dayoneapp.com/">Day One</a>. 它是一个记录笔记的工具。</p>
