--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
       <link rel="stylesheet" href="/css/syntax.css">
       <link rel="stylesheet" href="/css/main.css">
       <link rel="stylesheet" href="/css/normalize.css">
+      <link rel="stylesheet" href="/css/css/font-awesome.min.css">
+      <!--[if IE 7]>
+        <link rel="stylesheet" href="/css/css/font-awesome-ie7.min.css">
+      <![endif]-->
       <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
       <link rel="icon" href="/favicon.ico" type="image/x-icon">
       <link rel="alternate" type="application/atom+xml" href="/atom.xml">
@@ -23,7 +27,8 @@
          </header>
 
          <div id="home">
-   <p class="intro">Pursue your object, be it what it will, steadily and indefatigably.  <a href="/about">About me.</a> <a href="/atom.xml">Atom feed.</a></p>
+   <p class="intro">Pursue your object, be it what it will, steadily and indefatigably. <a href="/atom.xml"><i class="icon-rss"></i></a></p> 
+   <hr />
    
    <h2>Blog posts</h2>
    <ul class="posts">
