--- a/quickling-1/index.html
+++ b/quickling-1/index.html
@@ -8,6 +8,10 @@
       <link rel="stylesheet" href="/css/syntax.css">
       <link rel="stylesheet" href="/css/main.css">
       <link rel="stylesheet" href="/css/normalize.css">
+      <link rel="stylesheet" href="/css/css/font-awesome.min.css">
+      <!--[if IE 7]>
+        <link rel="stylesheet" href="/css/css/font-awesome-ie7.min.css">
+      <![endif]-->
       <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
       <link rel="icon" href="/favicon.ico" type="image/x-icon">
       <link rel="alternate" type="application/atom+xml" href="/atom.xml">
@@ -24,6 +28,7 @@
 
          <article>
    <h2>网页加载优化方案：bigpipe，bigrender，lazyrender</h2>
+   <hr />
    <p>开篇之初需要介绍一些网站页面加载的各种性能优化手段，他们分别是<code>bigrender</code>、<code>bigpipe</code>、<code>lazyrender</code>。</p>
 
 <ul>
