--- a/about/index.html
+++ b/about/index.html
@@ -8,6 +8,10 @@
       <link rel="stylesheet" href="/css/syntax.css">
       <link rel="stylesheet" href="/css/main.css">
       <link rel="stylesheet" href="/css/normalize.css">
+      <link rel="stylesheet" href="/css/css/font-awesome.min.css">
+      <!--[if IE 7]>
+        <link rel="stylesheet" href="/css/css/font-awesome-ie7.min.css">
+      <![endif]-->
       <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
       <link rel="icon" href="/favicon.ico" type="image/x-icon">
       <link rel="alternate" type="application/atom+xml" href="/atom.xml">
