--- a/struct-1/index.html
+++ b/struct-1/index.html
@@ -8,6 +8,10 @@
       <link rel="stylesheet" href="/css/syntax.css">
       <link rel="stylesheet" href="/css/main.css">
       <link rel="stylesheet" href="/css/normalize.css">
+      <link rel="stylesheet" href="/css/css/font-awesome.min.css">
+      <!--[if IE 7]>
+        <link rel="stylesheet" href="/css/css/font-awesome-ie7.min.css">
+      <![endif]-->
       <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
       <link rel="icon" href="/favicon.ico" type="image/x-icon">
       <link rel="alternate" type="application/atom+xml" href="/atom.xml">
@@ -24,6 +28,7 @@
 
          <article>
    <h2>那些年我们落下的课-数据结构01-链表</h2>
+   <hr />
    <p>毕业快四年了，多多少少在自己的职业上有了一些积累。积累的是一些做事的经验，还有的也就是什么话该说什么不能说以及什么时候说。但反思知识体系，实在映衬不住四年的工作经验。</p>
 
 <p>工作了那么长时间，在实现一个功能的时候也是使用语言提供的API，跟刚毕业的学生没什么两样时，也许只是熟悉了一个体系或者有更多的见识，多少显得尴尬。索性就拿起一本算法书在闲暇的时候研究研究。</p>
