--- a/welcome-to-jekyll/index.html
+++ b/welcome-to-jekyll/index.html
@@ -8,6 +8,10 @@
       <link rel="stylesheet" href="/css/syntax.css">
       <link rel="stylesheet" href="/css/main.css">
       <link rel="stylesheet" href="/css/normalize.css">
+      <link rel="stylesheet" href="/css/css/font-awesome.min.css">
+      <!--[if IE 7]>
+        <link rel="stylesheet" href="/css/css/font-awesome-ie7.min.css">
+      <![endif]-->
       <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
       <link rel="icon" href="/favicon.ico" type="image/x-icon">
       <link rel="alternate" type="application/atom+xml" href="/atom.xml">
@@ -24,6 +28,7 @@
 
          <article>
    <h2>Welcome to Jekyll!</h2>
+   <hr />
    <p>You&#39;ll find this post in your <code>_posts</code> directory - edit this post and re-build (or run with the <code>-w</code> switch) to see your changes!
 To add new posts, simply add a file in the <code>_posts</code> directory that follows the convention: YYYY-MM-DD-name-of-post.ext.</p>
 
