--- a/node-1/index.html
+++ b/node-1/index.html
@@ -29,9 +29,7 @@
          <article>
    <h2>用nodejs构建网站</h2>
    <hr />
-   <h3>用node.js构建网站</h3>
-
-<p>node.js灵活，轻巧，异步IO这些都是被大家传道的优点。不过在我看来，其后面庞大的社区才是最闪亮的。社区很庞大，以至于实现什么东西，扒拉扒拉就能搞定。所以这次node.js构建网站也出现在了现在的研究课题里面。</p>
+   <p>node.js灵活，轻巧，异步IO这些都是被大家传道的优点。不过在我看来，其后面庞大的社区才是最闪亮的。社区很庞大，以至于实现什么东西，扒拉扒拉就能搞定。所以这次node.js构建网站也出现在了现在的研究课题里面。</p>
 
 <p>构建网站，开发其次，其实最主要的还是线上的运维。这块如果不搞好实在只能算是个玩具。不过好在现在有很多的管理nodejs进程的工具。比如<code>pm2</code>、<code>forever</code>等。还需要一套容灾方案。比如服务挂了，起不起来了怎么办等等等。</p>
 
@@ -119,7 +117,7 @@
 
 <h4>完善的降级方案</h4>
 
-<p>如果是成年老站，在使用node这么个新款时，不得不考虑如果node挂掉。切换到老站上面的策略。</p>
+<p>如果是成年老站，在使用node这么个新款时，不得不考虑如果node挂掉,切换到老站上面的策略。</p>
 
 <p>现在一致的做法是，在php/java等机器上nginx把需要node处理的数据都代理给node机器处理。一旦node机器出问题，则把这些流量切回本机。这个方案估计是一个长态方案，一直要node稳定。</p>
 
