--- a/assets/angularjs.html
+++ b/assets/angularjs.html
@@ -2,12 +2,20 @@
 <html>
 <head>
     <title>AngularJS demo</title>
+    <style type="text/css">
+        .demo {
+            width: 500px;
+        }
+    </style>
 </head>
 <body>
 
 <div class="container">
     <div class="demo-list">
         <div class="demo">
+            <div class="demo-title">
+                Tree
+            </div>
             <a class="jsbin-embed" href="http://jsbin.com/roqigi/2/embed?output">Angular.JS</a>
         </div>
     </div>
