--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: orrafy
    <h2>Blog posts</h2>
    <ul class="posts">
       {% for post in site.posts %}
-      <li><span>&gt; {{ post.date | date_to_string }}</span> <a href="{{ post.url }}">{{ post.title }}</a></li>
+      <li><a href="{{ post.url }}">{{ post.title }}</a></li>
       {% endfor %}
    </ul>
 </div>
