--- a/readme.html
+++ b/readme.html
@@ -4,14 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous">
-  <link href="https://www.orrafy.com/css/reset.css?v=fatal: detected dubious ownership in repository at &#39;/github/workspace&#39;
-To add an exception for this directory, call:
-
-	git config --global --add safe.directory /github/workspace" rel="stylesheet">
-  <link href="https://www.orrafy.com/css/site.css?v=fatal: detected dubious ownership in repository at &#39;/github/workspace&#39;
-To add an exception for this directory, call:
-
-	git config --global --add safe.directory /github/workspace" rel="stylesheet">
+  <link href="https://www.orrafy.com/css/reset.css?v=0f2d18a" rel="stylesheet">
+  <link href="https://www.orrafy.com/css/site.css?v=0f2d18a" rel="stylesheet">
   <link rel="preload" href="https://www.orrafy.com/fonts/blockzone-webfont.woff2" as="font" type="font/woff2" crossorigin>
   
 </head>
@@ -37,7 +31,7 @@ To add an exception for this directory, call:
 <h1>My homepage with org-mode</h1>
 <div class="content">
   
-<figure id="org83979c3">
+<figure id="orgcb9cfbb">
 <a href="https://github.com/oxund/posts/actions?query=workflow%3A%22Build+and+publish+to+pages%22"><img src="https://github.com/oxund/posts/workflows/Build%20and%20publish%20to%20pages/badge.svg" alt="badge.svg" class="org-svg"></a>
 
 </figure>
