--- a/readme.html
+++ b/readme.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous">
-  <link href="https://www.orrafy.com/css/reset.css?v=0f2d18a" rel="stylesheet">
-  <link href="https://www.orrafy.com/css/site.css?v=0f2d18a" rel="stylesheet">
+  <link href="https://www.orrafy.com/css/reset.css?v=f8c5aed" rel="stylesheet">
+  <link href="https://www.orrafy.com/css/site.css?v=f8c5aed" rel="stylesheet">
   <link rel="preload" href="https://www.orrafy.com/fonts/blockzone-webfont.woff2" as="font" type="font/woff2" crossorigin>
   
 </head>
@@ -31,7 +31,7 @@
 <h1>My homepage with org-mode</h1>
 <div class="content">
   
-<figure id="orgcb9cfbb">
+<figure id="orgc28f8da">
 <a href="https://github.com/oxund/posts/actions?query=workflow%3A%22Build+and+publish+to+pages%22"><img src="https://github.com/oxund/posts/workflows/Build%20and%20publish%20to%20pages/badge.svg" alt="badge.svg" class="org-svg"></a>
 
 </figure>
@@ -78,6 +78,6 @@ The content of the site, Copyright (©) 2014-2025 OxUnd.
  
  <p class='disclaimer'></p>
 
-  <p>Last updated 17 Sep 2025. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 29.4 (<a href="https://orgmode.org/">Org</a> mode 9.6.15). <a href="https://www.orrafy.com/readme.html">Details</a>.</p>
+  <p>Last updated 20 Sep 2025. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 29.4 (<a href="https://orgmode.org/">Org</a> mode 9.6.15). <a href="https://www.orrafy.com/readme.html">Details</a>.</p>
 </body>
 </html>
