--- a/tutorials/rpm-packaging/index.html
+++ b/tutorials/rpm-packaging/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 17 Sep. 2025 -->
+<!-- 20 Sep. 2025 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>RPM Packaging Tutorial</title>
@@ -192,7 +192,7 @@ Lets start with a famous UNIX tool: <code>rsync</code>.
 So a package is an archive file:
 </p>
 
-<pre class="example" id="org8bf219a">
+<pre class="example" id="orgfeb7e0e">
 rsync-3.1.2-1.5.x86_64.rpm
 </pre>
 
@@ -200,7 +200,7 @@ rsync-3.1.2-1.5.x86_64.rpm
 containing all files related to the application:
 </p>
 
-<pre class="example" id="org3b90d3c">
+<pre class="example" id="orgf8a3f8e">
 $ rpm -qpl rsync-3.1.2-1.5.x86_64.rpm
 
 /etc/logrotate.d/rsync
@@ -231,7 +231,7 @@ to:
 <li><code>Name</code>, <code>Summary</code>, <code>Description</code>, <code>License</code>, etc.</li>
 </ul>
 
-<pre class="example" id="org526c56f">
+<pre class="example" id="org07480a1">
 $ rpm -qpi rsync-3.1.2-1.5.x86_64.rpm
 
 Name        : rsync
@@ -268,7 +268,7 @@ Distribution: openSUSE Tumbleweed
 (<code>Requires</code>)</li>
 </ul>
 
-<pre class="example" id="org5132a2a">
+<pre class="example" id="orgabc4c7f">
 $ rpm -qp --requires rsync-3.1.2-1.5.x86_64.rpm
 /bin/sh
 /usr/bin/perl
@@ -309,7 +309,7 @@ called during runtime.
 <li>What does the package provide for other packages to work (<code>Provides</code>)</li>
 </ul>
 
-<pre class="example" id="orgb91e155">
+<pre class="example" id="org111eb52">
 $ rpm -qp --provides rsync-3.1.2-1.5.x86_64.rpm
 config(rsync) = 3.1.2-1.5
 rsync = 3.1.2-1.5
@@ -338,7 +338,7 @@ level.
 Packages can be installed with the <code>rpm</code> tools:
 </p>
 
-<pre class="example" id="org742aebc">
+<pre class="example" id="org88c8501">
 $ rpm -U rsync-3.1.2-1.5.x86_64.rpm
 </pre>
 
@@ -349,7 +349,7 @@ the <code>-p</code> option and use what is called the NVRA
 subset of it, e.g. just name (<code>rsync</code>).
 </p>
 
-<pre class="example" id="org5698b98">
+<pre class="example" id="orgbb330d9">
 $ rpm -q --provides rsync
 </pre>
 
@@ -415,7 +415,7 @@ build system scanned the executable <code>/usr/lib/rsync</code> and realized it 
 linked against <code>libc.so.6</code>:
 </p>
 
-<pre class="example" id="orgf33b879">
+<pre class="example" id="orgf46ee4b">
 $ ldd /usr/bin/rsync
         linux-vdso.so.1 (0x00007ffccb34a000)
         libacl.so.1 =&gt; /lib64/libacl.so.1 (0x00007fc406028000)
@@ -444,7 +444,7 @@ only <code>Requires: libsound</code> (as in package name). Then when he/she trie
 to run it:
 </p>
 
-<pre class="example" id="orgedce203">
+<pre class="example" id="org14e4394">
 $ musicplayer
 error while loading shared libraries: libsound.so.7: cannot open shared object file: No such file or directory
 </pre>
@@ -555,7 +555,7 @@ includes a command-line tool called <code>zypper</code>. While tools like
 console you will likely interact with <code>zypper</code>.
 </p>
 
-<pre class="example" id="org0017db3">
+<pre class="example" id="orgfb0764e">
 $ zypper install rsync-3.1.2-1.5.x86_64.rpm
 </pre>
 
@@ -598,7 +598,7 @@ package, and then rpm files are retrieved on demand at installation
 time.
 </p>
 
-<pre class="example" id="orgc003ca4">
+<pre class="example" id="org4f89a8e">
 $ zypper lr
 
 # | Alias          | Name           | Enabled | GPG Check | Refresh
@@ -660,7 +660,7 @@ rpm files into its cache.
 <div id="outline-container-refreshing-a-repository" class="outline-4">
 <h4 id="refreshing-a-repository">Refreshing a repository</h4>
 <div class="outline-text-4" id="text-refreshing-a-repository">
-<pre class="example" id="orgc179700">
+<pre class="example" id="orge6a0173">
 $ zypper ref
 </pre>
 
@@ -792,7 +792,7 @@ Patterns are used to install a collection of software in a comfortable
 way. For example you can install a working Laptop-oriented system with:
 </p>
 
-<pre class="example" id="orgcc83be5">
+<pre class="example" id="orge42f5f3">
 $ zypper install -t pattern laptop
 </pre>
 
@@ -821,7 +821,7 @@ of the magic behind patterns (equivalent to
 Similar to patterns, products can be queried with:
 </p>
 
-<pre class="example" id="org619b5f0">
+<pre class="example" id="org4fd5d53">
 $ zypper search -t product
 </pre>
 
@@ -864,7 +864,7 @@ package manager will dynamically read <code>/sys/devices</code> and make this
 entity have provides like:
 </p>
 
-<pre class="example" id="org492258c">
+<pre class="example" id="orgf1ed218">
 Provides :modalias(pci:v0000104Cd0000840[01]sv*sd*bc*sc*i*)
 </pre>
 
@@ -873,7 +873,7 @@ Then, a package providing a WLAN driver for some cards (e.g.
 <code>wlan-kmp-default</code>), could have the following dependencies:
 </p>
 
-<pre class="example" id="orgdd6cacd">
+<pre class="example" id="org4f0d326">
 Supplements: modalias(kernel-default:pci:v0000104Cd0000840[01]sv*sd*bc*sc*i*)
 Supplements: modalias(kernel-default:pci:v0000104Cd00009066sv*sd*bc*sc*i*)
 Supplements: modalias(kernel-default:pci:v000010B7d00006000sv*sd*bc*sc*i*)
@@ -922,7 +922,7 @@ injected as we already mentioned), and how the content of the package is
 created. A very simple spec file would be:
 </p>
 
-<pre class="example" id="org68d0278">
+<pre class="example" id="orgc5677fa">
 Name:           mypackage
 Version:        1.0
 Release:        0
@@ -970,7 +970,7 @@ like <code>%{_prefix}</code>, <code>%{_datadir}</code>, <code>%{_mandir}</code>,
 <code>%{_bindir}</code>, etc. You can evaluate a macro like this:
 </p>
 
-<pre class="example" id="org3fa0864">
+<pre class="example" id="orga5fc7c8">
 $ rpm --eval "%{_libdir}"
 /usr/lib64
 </pre>
@@ -1023,7 +1023,7 @@ file to be in a specific location, so I usually tweak the standard
 configuration so that spec files are searched in the current directory:
 </p>
 
-<pre class="example" id="orgeb22c2c">
+<pre class="example" id="org3b3f220">
 $ cat ~/.rpmmacros
 %topdir /space/packages
 %_builddir %{topdir}/build
@@ -1042,7 +1042,7 @@ As you can see, I also configure it so that built packages are saved in
 Once I have this setup, I can do:
 </p>
 
-<pre class="example" id="orgcdfd129">
+<pre class="example" id="orgd149b7f">
 $ rpmbuild -bb mypackage.spec
 Executing(%install): /bin/sh -e /var/tmp/rpm-tmp.lVzwnj
 + umask 022
@@ -1067,7 +1067,7 @@ Executing(%clean): /bin/sh -e /var/tmp/rpm-tmp.0xLGri
 Now I can verify the content of the package:
 </p>
 
-<pre class="example" id="org93bf839">
+<pre class="example" id="org634de6b">
 % rpm -qpl /space/packages/rpms/x86_64/mypackage-1.0-0.x86_64.rpm
 /usr/share/mypackage/CONTENT
 </pre>
@@ -1127,7 +1127,7 @@ On the other hand, the original <code>oracle-instantclient-sqlplus</code> packag
 is required at runtime, but we don&rsquo;t need it to build our package.
 </p>
 
-<pre class="example" id="org41d3776">
+<pre class="example" id="org722134a">
 Name:           gqlplus
 Version:        1.15
 Release:        0
@@ -1195,7 +1195,7 @@ installed by the -devel packages, it will be scanned and the right
 <code>Requires</code> injected:
 </p>
 
-<pre class="example" id="orgb0a46df">
+<pre class="example" id="org707f9b4">
 $ rpm -qp --requires gqlplus-1.15-0.x86_64.rpm
 libc.so.6()(64bit)
 ...
@@ -1210,7 +1210,7 @@ These symbols are provided by the right package, so the solver will
 match them:
 </p>
 
-<pre class="example" id="org7ea03d9">
+<pre class="example" id="org134b497">
 rpm -q --whatprovides 'libncurses.so.6()(64bit)'
 libncurses6-6.0-19.1.x86_64
 </pre>
@@ -1281,7 +1281,7 @@ right order and re-published.
 </p>
 
 
-<figure id="org885f6a0">
+<figure id="orgb950ad3">
 <img src="images/gqlplus-obs.png" alt="gqlplus-obs.png">
 
 </figure>
@@ -1305,7 +1305,7 @@ With the <code>osc</code> tool you can checkout packages from OBS, make changes 
 resubmit them.
 </p>
 
-<pre class="example" id="orge62db46">
+<pre class="example" id="org5c7038e">
 $ osc co home:dmacvicar gqlplus
 A    home:dmacvicar
 A    home:dmacvicar/gqlplus
@@ -1325,7 +1325,7 @@ machine), setting up that environment automatically using the
 a different distribution than the one you are running.
 </p>
 
-<pre class="example" id="org3a7f9e2">
+<pre class="example" id="org9c08cb8">
 $ cd home:dmacvicar/gqlplus
 $ osc build openSUSE_Leap_42.2
 ...
@@ -1354,7 +1354,7 @@ sources by hundreds of contributors.
 The <code>spec-cleaner</code> tool can help you keeping your spec file in shape:
 </p>
 
-<pre class="example" id="org9574c4a">
+<pre class="example" id="org8e99eee">
 $ spec-cleaner -i gqlplus.spec
 </pre>
 
@@ -1406,7 +1406,7 @@ developed. It is easy to find the devel project using the <code>develproject</co
 (<code>dp</code>) command:
 </p>
 
-<pre class="example" id="orgc257165">
+<pre class="example" id="orgf66e3ef">
 $ osc dp openSUSE:Factory rsync
 network
 </pre>
@@ -1416,7 +1416,7 @@ Create a branch and a local checkout of the package using the <code>branch</code
 command:
 </p>
 
-<pre class="example" id="orgd9b85f7">
+<pre class="example" id="org138a73c">
 $ osc bco network rsync
 A    home:dmacvicar:branches:network
 A    home:dmacvicar:branches:network/rsync
@@ -1447,7 +1447,7 @@ into the devel project. To do this, use the <code>submitrequest</code> (<code>sr
 command:
 </p>
 
-<pre class="example" id="org688d8c9">
+<pre class="example" id="orga8d9f88">
 $ osc sr
 </pre>
 
@@ -1466,7 +1466,7 @@ needed, however.
 <footer id="postamble" class="status">
 <p class="date">Date: 2017-03-08</p>
 <p class="author">Author: Duncan Mac-Vicar P.</p>
-<p class="date">Created: 17 Sep. 2025</p>
+<p class="date">Created: 20 Sep. 2025</p>
 </footer>
 </body>
 </html>
